--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "athlon1600/youtube-downloader": "^3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/php/"
+        }
     }
 }
